spike/antlr4-glp-grammar/gen/GlpParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Glp.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class GlpParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		WS=1, LINE_COMMENT=2, BLOCK_COMMENT=3, COLONCOLONEQ=4, IMPLIES=5, ASSIGN=6, 
		UNIV=7, UNIV_DECOMPOSE=8, GROUND_EQUAL=9, ARITH_EQUAL=10, ARITH_NOT_EQUAL=11, 
		LESS_EQUAL=12, GREATER_EQUAL=13, AT_LESS_EQUAL=14, AT_GREATER_EQUAL=15, 
		AT_LESS=16, AT_GREATER=17, SLASH_SLASH=18, LPAREN=19, RPAREN=20, LBRACKET=21, 
		RBRACKET=22, LBRACE=23, RBRACE=24, DOT=25, COMMA=26, PIPE=27, QUESTION=28, 
		SEMICOLON=29, PLUS=30, MINUS=31, STAR=32, SLASH=33, LESS=34, GREATER=35, 
		EQUALS=36, TILDE=37, HASH=38, BACKSLASH=39, AT=40, MOD=41, PROCEDURE=42, 
		READER=43, VARIABLE=44, UNDERSCORE=45, NUMBER=46, ATOM=47, STRING=48;
	public const int
		RULE_module = 0, RULE_item = 1, RULE_directive = 2, RULE_moduleName = 3, 
		RULE_procDecl = 4, RULE_procName = 5, RULE_procNameToken = 6, RULE_argType = 7, 
		RULE_typeDef = 8, RULE_typeAlt = 9, RULE_typeExpr = 10, RULE_typePrimary = 11, 
		RULE_typeList = 12, RULE_clause = 13, RULE_head = 14, RULE_atomApp = 15, 
		RULE_goal = 16, RULE_goalOrGuard = 17, RULE_goalOrGuardInner = 18, RULE_cmpOp = 19, 
		RULE_arith = 20, RULE_arithPrimary = 21, RULE_term = 22, RULE_primary = 23, 
		RULE_list = 24;
	public static readonly string[] ruleNames = {
		"module", "item", "directive", "moduleName", "procDecl", "procName", "procNameToken", 
		"argType", "typeDef", "typeAlt", "typeExpr", "typePrimary", "typeList", 
		"clause", "head", "atomApp", "goal", "goalOrGuard", "goalOrGuardInner", 
		"cmpOp", "arith", "arithPrimary", "term", "primary", "list"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, "'::='", "':-'", "':='", "'=..'", "'..='", "'=?='", 
		"'=:='", "'=\\='", "'=<'", "'>='", "'@=<'", "'@>='", "'@<'", "'@>'", "'//'", 
		"'('", "')'", "'['", "']'", "'{'", "'}'", "'.'", "','", "'|'", "'?'", 
		"';'", "'+'", "'-'", "'*'", "'/'", "'<'", "'>'", "'='", "'~'", "'#'", 
		"'\\'", "'@'", "'mod'", "'procedure'", null, null, "'_'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "WS", "LINE_COMMENT", "BLOCK_COMMENT", "COLONCOLONEQ", "IMPLIES", 
		"ASSIGN", "UNIV", "UNIV_DECOMPOSE", "GROUND_EQUAL", "ARITH_EQUAL", "ARITH_NOT_EQUAL", 
		"LESS_EQUAL", "GREATER_EQUAL", "AT_LESS_EQUAL", "AT_GREATER_EQUAL", "AT_LESS", 
		"AT_GREATER", "SLASH_SLASH", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", 
		"LBRACE", "RBRACE", "DOT", "COMMA", "PIPE", "QUESTION", "SEMICOLON", "PLUS", 
		"MINUS", "STAR", "SLASH", "LESS", "GREATER", "EQUALS", "TILDE", "HASH", 
		"BACKSLASH", "AT", "MOD", "PROCEDURE", "READER", "VARIABLE", "UNDERSCORE", 
		"NUMBER", "ATOM", "STRING"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Glp.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static GlpParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}


	    private bool SoftKw(string s) {
	        var t = TokenStream.LT(1);
	        return t != null && t.Type == ATOM && t.Text == s;
	    }

		public GlpParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GlpParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ModuleContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(GlpParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DirectiveContext[] directive() {
			return GetRuleContexts<DirectiveContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DirectiveContext directive(int i) {
			return GetRuleContext<DirectiveContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemContext[] item() {
			return GetRuleContexts<ItemContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ItemContext item(int i) {
			return GetRuleContext<ItemContext>(i);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_module; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGlpListener typedListener = listener as IGlpListener;
			if (typedListener != null) typedListener.EnterModule(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGlpListener typedListener = listener as IGlpListener;
			if (typedListener != null) typedListener.ExitModule(this);
		}
	}

	[RuleVersion(0)]
	public ModuleContext module() {
		ModuleContext _localctx = new ModuleContext(Context, State);
		EnterRule(_localctx, 0, RULE_module);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 53;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 50;
					directive();
					}
					} 
				}
				State = 55;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			State = 59;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 56;
					item();
					}
					} 
				}
				State = 61;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			}
			State = 62;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ItemContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ProcDeclContext procDecl() {
			return GetRuleContext<ProcDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeDefContext typeDef() {
			return GetRuleContext<TypeDefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ClauseContext clause() {
			return GetRuleContext<ClauseContext>(0);
		}
		public ItemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_item; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGlpListener typedListener = listener as IGlpListener;
			if (typedListener != null) typedListener.EnterItem(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGlpListener typedListener = listener as IGlpListener;
			if (typedListener != null) typedListener.ExitItem(this);
		}
	}

	[RuleVersion(0)]
	public ItemContext item() {
		ItemContext _localctx = new ItemContext(Context, State);
		EnterRule(_localctx, 2, RULE_item);
		try {
			State = 67;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 64;
				procDecl();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 65;
				typeDef();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 66;
				clause();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DirectiveContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MINUS() { return GetToken(GlpParser.MINUS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOT() { return GetToken(GlpParser.DOT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ATOM() { return GetTokens(GlpParser.ATOM); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ATOM(int i) {
			return GetToken(GlpParser.ATOM, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(GlpParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ModuleNameContext moduleName() {
			return GetRuleContext<ModuleNameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(GlpParser.RPAREN, 0); }
		public DirectiveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_directive; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGlpListener typedListener = listener as IGlpListener;
			if (typedListener != null) typedListener.EnterDirective(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGlpListener typedListener = listener as IGlpListener;
			if (typedListener != null) typedListener.ExitDirective(this);
		}
	}

	[RuleVersion(0)]
	public DirectiveContext directive() {
		DirectiveContext _localctx = new DirectiveContext(Context, State);
		EnterRule(_localctx, 4, RULE_directive);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 69;
			Match(MINUS);
			State = 88;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				{
				State = 70;
				if (!(SoftKw("module"))) throw new FailedPredicateException(this, "SoftKw(\"module\")");
				State = 71;
				Match(ATOM);
				State = 72;
				Match(LPAREN);
				State = 73;
				moduleName();
				State = 74;
				Match(RPAREN);
				}
				break;
			case 2:
				{
				State = 76;
				if (!(SoftKw("stdlib"))) throw new FailedPredicateException(this, "SoftKw(\"stdlib\")");
				State = 77;
				Match(ATOM);
				}
				break;
			case 3:
				{
				State = 78;
				if (!(SoftKw("mode"))) throw new FailedPredicateException(this, "SoftKw(\"mode\")");
				State = 79;
				Match(ATOM);
				State = 80;
				Match(LPAREN);
				State = 85;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
				case 1:
					{
					State = 81;
					if (!(SoftKw("user"))) throw new FailedPredicateException(this, "SoftKw(\"user\")");
					State = 82;
					Match(ATOM);
					}
					break;
				case 2:
					{
					State = 83;
					if (!(SoftKw("system"))) throw new FailedPredicateException(this, "SoftKw(\"system\")");
					State = 84;
					Match(ATOM);
					}
					break;
				}
				State = 87;
				Match(RPAREN);
				}
				break;
			}
			State = 90;
			Match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModuleNameContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ATOM() { return GetTokens(GlpParser.ATOM); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ATOM(int i) {
			return GetToken(GlpParser.ATOM, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] DOT() { return GetTokens(GlpParser.DOT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOT(int i) {
			return GetToken(GlpParser.DOT, i);
		}
		public ModuleNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_moduleName; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGlpListener typedListener = listener as IGlpListener;
			if (typedListener != null) typedListener.EnterModuleName(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGlpListener typedListener = listener as IGlpListener;
			if (typedListener != null) typedListener.ExitModuleName(this);
		}
	}

	[RuleVersion(0)]
	public ModuleNameContext moduleName() {
		ModuleNameContext _localctx = new ModuleNameContext(Context, State);
		EnterRule(_localctx, 6, RULE_moduleName);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92;
			Match(ATOM);
			State = 97;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==DOT) {
				{
				{
				State = 93;
				Match(DOT);
				State = 94;
				Match(ATOM);
				}
				}
				State = 99;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
